--- a/platform_code/home/templates/home/faq.html
+++ b/platform_code/home/templates/home/faq.html
@@ -14,14 +14,14 @@
         <li class="li-with-disc margin-10"><p>
             {% blocktrans trimmed %}
             It is the result of a participatory work initiated in mid-2019
-            and carried out by the Substra Foundation association.<strong> This approach is described in this
+            and carried out by the Substra Foundation association. This approach is described in this
             {% endblocktrans %}
             <a href="https://www.substra.ai/fr/blog/evaluation-data-science-responsable"
                title="https://www.substra.ai/fr/blog/evaluation-data-science-responsable">{%trans "blog article"%}
             </a>
-            {% trans " that we recommend!" %}</strong></p>
+            {% trans " that we recommend!" %}</p>
             <p>{% blocktrans trimmed %}
-                Nevertheless, let us take up again here some of the contextual elements described in the
+                But let's review here some of the contextual elements described in the
                 article. First of all, we can see that there is growing tension between the potential and interest of AI
                 techniques on the one hand, and the difficulty of trusting these techniques or their implementation on
                 the other (whether by private actors such as
@@ -32,21 +32,21 @@
                 <a href="https://spectrum.ieee.org/cars-that-think/transportation/self-driving/three-small-stickers-on-road-can-steer-tesla-autopilot-into-oncoming-lane"
                    target="_blank"
                    title="https://spectrum.ieee.org/cars-that-think/transportation/self-driving/three-small-stickers-on-road-can-steer-tesla-autopilot-into-oncoming-lane">
-                    {% trans "this astonishing example" %}
+                    {% trans "this astonishing example," %}
                 </a>
-                {% trans ", or by public actors such as the States, cf. " %}
+                {% trans "or by public actors such as States, cf. " %}
                 <a href="https://advances.sciencemag.org/content/4/1/eaao5580"
                    target="_blank"
                    title="https://advances.sciencemag.org/content/4/1/eaao5580">COMPAS
                 </a>
-                {% trans " on conditional release in the USA, the controversies each year on Parcoursup in France, " %}
+                {% trans " on parole in the USA, the controversies each year on Parcoursup in France, " %}
                 <a href="https://www.theguardian.com/technology/2020/feb/05/welfare-surveillance-system-violates-human-rights-dutch-court-rules"
                    target="_blank"
                    title="https://www.theguardian.com/technology/2020/feb/05/welfare-surveillance-system-violates-human-rights-dutch-court-rules">
-                    {% trans "unemployment benefits in the Netherlands" %}
+                   {% trans "unemployment benefits in the Netherlands,"%}
                 </a>
                 {% blocktrans trimmed %}
-                , and many
+                and many
                 others). In this context, it is becoming increasingly difficult for an organisation to implement data
                 science approaches in its products and services and to take this on board publicly.
                 {% endblocktrans %}
@@ -55,13 +55,13 @@
                 Obviously this tension is not new, certain risks are very real, and it seems to us that there
                 is a general consensus on the fact that it is necessary to develop structuring and reassuring
                 frameworks. You only have to type <i>AI and ethics</i> or <i>responsible AI</i> into a search engine to
-                see the plethora of initiatives in this field. However, many of them are lists of cardinal principles,
+                see the significant number of initiatives in this field. However, many of them are lists of cardinal principles,
                 and do not offer a concrete, operational hook. How can we position ourselves? How to evaluate one's
                 organisation? What should you work on to <i>comply</i> with these principles?
                 {% endblocktrans %}
             </p>
             <p>{% blocktrans trimmed %}
-                It is on the basis of this reflection that we wanted to develop a tool that is intended for
+                It is based on these observations that we wanted to develop a tool that is intended for
                 practitioners, useful and actionable as soon as possible. Give it a try and tell us what you think!
                 {% endblocktrans %}
             </p>
@@ -75,8 +75,8 @@
             The self-assessment tool has been developed to suit (and hopefully
             bring something!) all organisations (companies, university laboratories, start-ups, specialised consultants,
             etc.) with activities in data science, AI, ML, etc. A data scientist, a team leader, or a technical director
-            for example can complete the assessment. The tool also allows several users for the same organisation to be
-            involved, for example to divide up the subjects.
+            for example can complete the assessment. The tool also enables several users from the same organisation to
+            fill in an assessment together, for example to split up the different topics.
             {% endblocktrans %}
         </li>
     </ul>
@@ -86,14 +86,14 @@
         <li class="li-with-disc margin-10">
             {% blocktrans trimmed %}
             It is composed of 6 thematic sections. We have chosen not to take
-            up here the 7 themes of the report of the EU high-level expert group or of its ALTAI tool, but to prefer a
+            up here the 7 themes of the report of the EU high-level expert group and its ALTAI tool, but to prefer a
             breakdown that we hope will be more pragmatic, aimed at getting closer to the life cycle of a data science
-            project. See it in use!
+            project.
             {% endblocktrans %}
         </li>
     </ul>
 
-    <p><strong>{% trans "Is the assessment fixed or will you change it over time?" %}</strong></p>
+    <p><strong>{% trans "Is the assessment framework 'finished' or will it keep evolving?" %}</strong></p>
     <ul>
         <li class="li-with-disc margin-10">
             {% blocktrans trimmed %}
@@ -115,9 +115,9 @@
     <h3 class="about-subtitle">{% trans "Score" %}</h3>
 
     <p>{% blocktrans trimmed %}
-        The synthetic score is on a total of 100 theoretical maximum points for your full assessment. It
-        provides an indication of the organization maturity level concerning a responsible and trustworthy data science.
-        At the end of 2020, the 50/100 threshold can be considered a very advanced maturity level.
+        The synthetic score is on a total of 100 theoretical maximum points for a full assessment. It
+        provides an indication of the organization maturity level on responsible and trustworthy data science
+        practices. At the end of 2020, the 50/100 threshold can be considered a very advanced maturity level.
         {% endblocktrans %} </p><br>
 
     <p>{% trans "The mechanism for calculating the score is relatively simple:" %}<br></p>
@@ -192,12 +192,7 @@
             assessment? In studying several systems for evaluating professional practices in different sectors, it has
             become apparent that it is rather good practice not to show these values. The aim is to give priority to the
             content, and to limit the risk of distracting the user by constantly putting before his eyes the numerical
-            elements that can lead to an attempt to <i>optimise</i> his answers.
-            {% endblocktrans %}
-        </li>
-        <li class="li-with-disc margin-10">
-            {% blocktrans trimmed %}
-            Why don't we get a score per section? We are working on this feature, be patient!
+            elements that can lead to an attempt to <i>optimise his answers</i>.
             {% endblocktrans %}
         </li>
     </ul>
