Develop the admin dashboard page
add blank admin dashboard page

add filters form

Fix ajax-view connection issue

Add post and get methods skeletons, forms classes, skeleton graph and stats  methods

Create template for each filter tab

Implement the navigation between the admin dashboard tabs

Fix CQ issues

Filter number of users and number of organisations by date

Add pie charts for organisations stats

Fix code quality errors

Display pie chart graph update

Add orgas pie chart graphs

Position filters form

Update style of dashbaord

Add users histogram and update tabs style

Update evaluations tab style

Replace graphs with tabular data in the first and the second tab

Fetch evaluations data from db

Add queries for evaluations stats

Handle evaluation filters

Fix some bugs and add reset filter button

Change dashboard layout

Add translations to dashboard

Fix users filter bug

Update dashboard interface and add tests draft

Fix some bugs, update style and add tests draft

Update locale file

Add descriptions for the stats tables

Alter filters input fields margin

Update locale file

Delete unnecessary graph methods

Delete unused imports

--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -82,6 +82,26 @@ h1 {
     font-size: 2rem;
 }
 
+.h-big{
+    text-align: center;
+    margin: 0 auto;
+    color: #5550FF;
+    position:relative;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+
+.h-small{
+    text-align: center;
+    margin: 0 auto;
+    color: #5550FF;
+    position:relative;
+    font-size: 1rem;
+}
+
+
+
 .center-select{
     text-align-last: center;
 }
@@ -104,6 +124,16 @@ a:hover {
     color: #8985FF;
     text-decoration: underline;
 }
+
+.a-re-init-btn {
+color: #4D566B;
+}
+
+.a-re-init-btn:hover {
+ color: #8985FF;
+ text-decoration: underline;
+}
+
 
 .hidden-div{
     visibility: hidden;
@@ -246,6 +276,7 @@ a:hover {
     margin-top: 150px;
 }
 
+
 .margin-bottom-0 {
     margin-bottom: 0px;
 }
@@ -299,6 +330,9 @@ a:hover {
 
 /********************************************** WIDTH ********************************************************/
 
+.same-size-100{
+   width: 100px;
+}
 
 .same-size-220{
     width: 220px;
@@ -1123,6 +1157,59 @@ body.navbar-is-fixed-top {
 
 /************************************************ END RESULTS ***********************************************/
 
+/******************************************* ADMIN DASHBOARD *****************************************/
+
+.reset-filter-btn {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    color: #FFBE3C;
+    cursor: pointer;
+}
+
+.reset-filter-btn:hover {
+    text-decoration: underline;
+}
+
+.dash-stats-table {
+  border-collapse: collapse;
+}
+
+.dash-stats-table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.dash-stats-table tr:hover {
+    background-color: #ddd;
+}
+
+.dash-stats-table td, .dash-stats-table th {
+  border: 2px solid #5550FF;
+  padding: 8px;
+  width: 50%;
+}
+
+.dash-stats-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #5550FF;
+  color: white;
+  text-align: center;
+}
+
+.filter-field {
+    margin : 10px;
+}
+
+.indicator{
+    text-align: center;
+    margin: 0 auto;
+    color: #5550FF;
+    position:relative;
+    font-size: 1rem;
+}
+
+/******************************************** END DASHBOARD ******************************************/
 
 /*********************************************** HELP TIP **************************************************/
 
