--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-
+{% autoescape off %}
 <div class="create-orga-modal">
     <form class="form" id="orga-creation-form" method='post' role="form">
         <div class="modal-header">
@@ -32,4 +32,4 @@
         </div>
     </form>
 </div>
-
+{% endautoescape %}
