--- a/platform_code/home/templates/home/homepage.html
+++ b/platform_code/home/templates/home/homepage.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="column remove-smartphone-screen margin-auto">
-        <img alt="image" class="img-fluid d-block mx-auto image-max-350" src="{% static 'image/Illustration_3.png' %}">
+        <img alt="image development of the assessment" class="img-fluid d-block mx-auto image-max-350" src="{% static 'image/Illustration_3.png' %}">
     </div>
 </div>
 
@@ -42,7 +42,7 @@
 
 <div class="row two-columns-adapted under-homepage-banner">
     <div class="column center-content">
-        <img alt="image" class="img-fluid d-block mx-auto margin-50 image-max-350"
+        <img alt="image sign for opposite directions" class="img-fluid d-block mx-auto margin-50 image-max-350"
              src="{% static 'image/Illustration_10.png' %}">
         <p class="margin-150">
             {% blocktrans trimmed %}
@@ -51,7 +51,7 @@
             companies, public institutions and citizens.
             {% endblocktrans %}
         </p>
-        <img alt="image"
+        <img alt="image nested parts"
              class="img-fluid d-block mx-auto margin-50 image-max-350"
              src="{% static 'image/Illustration_1.png' %}">
     </div>
@@ -64,7 +64,7 @@
             together?
             {% endblocktrans %}
         </p>
-        <img alt="image" class="img-fluid d-block mx-auto margin-150 image-max-350"
+        <img alt="image gearing development" class="img-fluid d-block mx-auto margin-150 image-max-350"
              src="{% static 'image/Illustration_7.png' %}">
         <p class="margin-150">
             {% blocktrans trimmed %}
@@ -90,14 +90,14 @@
 
 <div class="row under-homepage-banner three-columns">
     <div class="column">
-        <img alt="image" class="centered-image middle-width" src="{% static 'image/picto_homepage_rose.png' %}">
+        <img alt="evaluation image" class="centered-image middle-width" src="{% static 'image/picto_homepage_rose.png' %}">
         <p class="text-center"><strong>{% trans "Evaluate your organisation" %}</strong></p>
         <p class="center">{% trans "Carry out your self-assessment on the 6 themes of Responsible Data Science and Trust" %}
         </p>
 
     </div>
     <div class="column">
-        <img alt="image" class="centered-image middle-width" src="{% static 'image/picto_homepage_bleu.png' %}">
+        <img alt="resources image" class="centered-image middle-width" src="{% static 'image/picto_homepage_bleu.png' %}">
         <p class="text-center"><strong>{% trans "Technical resources" %}</strong></p>
         <p class="center">
             {% blocktrans trimmed %}
@@ -106,7 +106,7 @@
         </p>
     </div>
     <div class="column">
-        <img alt="image" class="centered-image middle-width" src="{% static 'image/picto_homepage_vert.png' %}">
+        <img alt="scoring image" class="centered-image middle-width" src="{% static 'image/picto_homepage_vert.png' %}">
         <p class="text-center"><strong>{% trans "Your score" %}</strong></p>
         <p class="center">{% trans "Analyse your progress over time on the different assessment axes" %}</p>
     </div>
