--- a/platform_code/home/templates/home/registration/password_reset_form.html
+++ b/platform_code/home/templates/home/registration/password_reset_form.html
@@ -3,6 +3,16 @@
 
 {% block content %}
 
+<head>
+    <title>{% trans 'Substra assessment: Forgotten password' %}</title>
+    <meta name="description"
+          content="{% blocktrans trimmed %}
+           Reset the password of your substra account.
+          {% endblocktrans %}"
+    />
+</head>
+
+
 <div class="container evaluation-title">
     <h3 class="title-pills">{% trans "Forgotten password" %}</h3>
     <form class="margin-50" method="post">
