--- a/platform_code/home/templates/home/release-notes.html
+++ b/platform_code/home/templates/home/release-notes.html
@@ -5,6 +5,8 @@
 {% load markdownify %}
 
 {% block content %}
+<title>Substra Assessment: release notes</title>
+
 <div class="container">
     <h1 class="h1-margin-no-breadcrumbs">{% trans "Release Notes" %}</h1>
     {% for release in release_notes %}
