--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -6,8 +6,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="VF_97-O0owZKL4JhutS6RoGExraIN1eL8nulwWPzbL0" />
     <title>Substra Assessment</title>
+    <meta name=keywords"
+          content="{% blocktrans trimmed %}
+          Substra, assessment, data science, trustworthy, responsible, resources, evaluation, label, association
+          {% endblocktrans %}"
+    />
+    <meta name="description"
+          content="{% blocktrans trimmed %}
+           Substra assessment is the result of a participatory work carried out by the Substra Foundation
+           association to promote responsible and trustworthy data science practices.
+          {% endblocktrans %}"
+    />
     <link href="{% static 'image/favicon.ico' %}" rel="shortcut icon" type="image/png">
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
