Add d4g logo and create css class for circle images

--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -207,6 +207,10 @@ a:hover {
     transition-duration: 1s;
 }
 
+.circle {
+    border-radius: 50%;
+}
+
 /******************************************* END GLOBAL PROPERTIES *******************************************/
 
 /************************************************** MARGIN ***************************************************/
