--- a/platform_code/templates/footer.html
+++ b/platform_code/templates/footer.html
@@ -18,8 +18,8 @@
        title="https://dataforgood.fr/"
        target="_blank">
         <img alt="Data for Good logo"
-         class="img-fluid d-block mx-auto logo-d4g margin-10"
-         src="{% static 'image/logo-d4g-white.png' %}">
+         class="img-fluid d-block mx-auto logo-d4g margin-10 circle"
+         src="{% static 'image/logo-d4g.png' %}">
     </a>
     <p><strong>DATA FOR GOOD</strong></p>
 </div>
