Add meetup logo

--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -1066,6 +1066,11 @@ body.navbar-is-fixed-top {
     color: white;
 }
 
+.fa-meetup{
+     background: red;
+     color: white;
+}
+
 .col-md-3-footer{
     padding: 4px;
     margin: auto;
