--- a/platform_code/templates/footer.html
+++ b/platform_code/templates/footer.html
@@ -66,4 +66,6 @@
         target="_blank"></a>
     <a class="fa fa-icon-footer fa-github" href="https://github.com/SubstraFoundation" target="_blank"></a>
     <a class="fa fa-icon-footer fa-envelope" href="mailto:hello.assessment@substra.org" target="_blank"></a>
+    <a class="fa fa-icon-footer fa-meetup" href="https://www.meetup.com/data-science-responsable-et-de-confiance/" target="_blank"></a>
+</div>
 </div>
