--- a/platform_code/assessment/templates/assessment/edit-evaluation.html
+++ b/platform_code/assessment/templates/assessment/edit-evaluation.html
@@ -9,7 +9,7 @@
          {% csrf_token %}
         <div class="modal-header">
             <h4 class="modal-title">{% trans "Do you want to change the name of your evaluation?" %} </h4>
-            <button class="close" data-dismiss="modal" type="button">&times;</button>
+            <button class="close" data-dismiss="modal" type="button" id="close-modal-edit-name">&times;</button>
         </div>
         <div class="modal-body create-form width-50">
             <div class="column">
@@ -35,6 +35,6 @@
         </div>
     </form>
 
-    <div id="confirmationchangeNameEval{{evaluation.id}}"></div>
+    <div id="confirmationchangeNameEval{{evaluation.id}}" class="margin-10"></div>
 
 </div>
