--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -34,7 +34,7 @@
         <li class="flex">
             <h1 class="h1-section h1-margin-breadcrumbs flex object-linked margin-bottom-smartphone-30 overflow-auto"
                 id="evaluationName">
-                <div>{{ evaluation.name }}</div>
+                <div id="evaluation-name">{{ evaluation.name }}</div>
                 <button class="btn btn-primary small-btn hidden-div remove-smartphone-screen margin-left-em"
                         data-target="#modal-edit{{evaluation.id}}"
                         data-toggle="modal" id="hiddenButton">
