--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -19,7 +19,7 @@
 
     <div class="body change-password-form margin-50 center-smartphone-screen">
         <div class="column-larger-tablet">
-            <form id="ChangePassword" method="post">
+            <form id="ChangePassword" method="post" action="#">
                 {% csrf_token %}
                 {% for field in change_password_form %}
                 <span class="float-left-larger-tablet">{{ field.label_tag }}</span>
