--- a/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
@@ -10,7 +10,7 @@
         <div class="modal-header">
             <h4 class="modal-title larger-small-screen-absolute-position"
                 id="myModalLabel">{% trans "Add a new member to the organisation" %}</h4>
-            <button class="close" data-dismiss="modal" type="button">&times;</button>
+            <button class="close" data-dismiss="modal" type="button" id="close-button-invitation">&times;</button>
         </div>
         <div class="modal-body margin-auto">
             <p>{% blocktrans trimmed %}
@@ -55,7 +55,7 @@
             <div class="column">
                 <div>
                     <button class="btn btn-primary adapted-button-size-250 margin-auto" id="sendInvitationButton"
-                            onclick="send_invitation('send_invitation_form')"
+                            onclick="sendInvitation('send_invitation_form')"
                             type="button">{% trans 'Send the invitation' %}
                     </button>
                 </div>
