--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
@@ -9,7 +9,7 @@
         <div class="modal-header">
             <h4 class="modal-title larger-small-screen-absolute-position">
                 {% trans "Edit the rights of" %} {{member.user.email}}</h4>
-            <button class="close" data-dismiss="modal" type="button">&times;</button>
+            <button class="close" data-dismiss="modal" type="button" id="close-edit-member{{member.id}}">&times;</button>
         </div>
         <div class="modal-body">
             <p>{% trans "You can edit the rights of the members, except those who are 'admin':" %}</p>
