--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
@@ -8,7 +8,7 @@
           role="form">
         <div class="modal-header">
             <h4 class="modal-title larger-small-screen-absolute-position">{% trans "Edit invitation rights" %} </h4>
-            <button class="close" data-dismiss="modal" type="button">&times;</button>
+            <button class="close" data-dismiss="modal" type="button" id="close-edit-invitation{{pending_member.id}}">&times;</button>
         </div>
         <div class="modal-body">
             <p>{% trans "You can edit the rights you want to give to the future users:" %}</p>
