--- a/platform_code/assessment/templates/assessment/section-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-feedback.html
@@ -17,7 +17,8 @@
                   role="form">
                 <div class="modal-header">
                     <h4 class="modal-title">{% trans "Give a feedback on this section" %}</h4>
-                    <button class="close" data-dismiss="modal" type="button">&times;</button>
+                    <button class="close" data-dismiss="modal" type="button"
+                            id="close-modal-section{{section.id}}">&times;</button>
                 </div>
                 <div class="modal-body">
                     {% csrf_token %}
@@ -30,7 +31,7 @@
                 <div class="modal-footer">
                     <button class="btn btn-primary same-size-250 margin-auto"
                             name="button_feedback"
-                            onclick="feedback({{section.id}}, 'section')"
+                            onclick="feedback(this, {{section.id}}, 'section')"
                             type="submit">{% trans 'Submit' %}
                     </button>
                 </div>
