--- a/platform_code/home/templates/home/homepage.html
+++ b/platform_code/home/templates/home/homepage.html
@@ -122,9 +122,9 @@
 </div>
 
 <div id="mc_embed_signup" class="newsletter-form-container margin-auto">
-    <form action="https://substra.us18.list-manage.com/subscribe/post?u=385fa3f9736ea94a1fcca969f&amp;id=a80365310d"
+    <form action="https://substra.us18.list-manage.com/subscribe/post-json?u=385fa3f9736ea94a1fcca969f&id=a80365310d"
           method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-          class="validate form-center" target="_blank" novalidate onsubmit="registerNewsletter(event)">
+          class="validate form-center" target="_blank" novalidate >
         <div id="mc_embed_signup_scroll" class="centered">
             <label for="mce-EMAIL"
                    class="newsletter-label">{% trans "Sign up to receive Substra Foundation’s newsletter:" %}</label>
@@ -151,5 +151,74 @@
     <p id="confirmSubscribe" class='newsletter-confirmation-text display-none'>{% trans "Thank you for subscribing to the newsletter!" %}</p>
     <p id="errorAlreadySubscribed" class='newsletter-confirmation-text display-none'>{% trans "You are already subscribed!" %}</p>
 </div>
+
+<script>
+
+function registerNewsletter(event) {
+    event.preventDefault();
+
+    this._form = this.querySelector("form");
+    this._action = this._form.getAttribute("action");
+    this._input = encodeURIComponent(this._form.querySelector("input.email").value);
+    document.MC_callback = function(response) {
+        if (response) {
+            //if mailChimp does not return "succes" -> display an error message
+            //else: hide form and display a confirmation message
+            let errorNum;
+            if (response.result != "success") {
+                //regroup mailChimp errors into 4 differents errors
+                //if the '0' is not present it means that the mail adress is already subscribed
+                if (response.msg[0] != '0') {
+                    errorNum = "alreadySub";
+                } else {
+                    let errorsReceivedRedirect = {
+                        "0 - Please enter a value": "empty",
+                        "0 - An email address must contain a single @": "format",
+                        "0 - The domain portion of the email address is invalid (the portion after the @: )": "format",
+                        "0 - The username portion of the email address is empty": "format",
+                        "0 - This email address looks fake or invalid. Please enter a real email address.": "invalid",
+                    }
+                    errorNum = errorsReceivedRedirect[response.msg];
+                }
+
+                let displayError = {
+                    'empty': function () {
+                        document.getElementById('errorMailEmpty').classList.remove("display-none");
+                    },
+                    'format': function () {
+                        document.getElementById('errorMailFormat').classList.remove("display-none");
+                    },
+                    'invalid': function () {
+                        document.getElementById('errorInvalidMail').classList.remove("display-none");
+                    },
+                    'alreadySub': function () {
+                        document.getElementById('mc_embed_signup').querySelector('form').remove();
+                        document.getElementById('errorAlreadySubscribed').classList.remove("display-none");
+                    }
+                }
+                displayError[errorNum]();
+            } else {
+                // Success
+                document.getElementById('mc_embed_signup').querySelector('form').remove();
+                document.getElementById('confirmSubscribe').classList.remove('display-none');
+            }
+        } else {
+            document.getElementById('errorServerUnavailable').classList.remove("display-none");
+        }
+    }
+
+    // generate script
+    this._script = document.createElement("script");
+    this._script.type = "text/javascript";
+    this._script.src = this._action + "&c=document.MC_callback&EMAIL=" + this._input;
+
+    // append script to head
+    document.getElementsByTagName("head")[0].appendChild(this._script);
+}
+
+var newsletter = document.querySelector("#mc_embed_signup")
+newsletter.addEventListener("submit", registerNewsletter);
+
+</script>
 
 {% endblock %}
